fix: corrigindo overflow x

--- a/styles/globalStyle.css
+++ b/styles/globalStyle.css
@@ -1,5 +1,6 @@
 * {
   overflow-y: hidden;
+  overflow-x: hidden;
   font-family: "Poppins", sans-serif;
   
 }
